--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -2,30 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 515,
-   "id": "682d4b8d",
+   "execution_count": 563,
+   "id": "e7146a71",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import warnings\n"
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 516,
-   "id": "cce7b327",
+   "id": "28daad63",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing Data\n",
     "bikeData = pd.read_csv(\"day.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 517,
-   "id": "da29d94c",
+   "id": "1f4472f3",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 518,
-   "id": "c80696cb",
+   "id": "91e55bdf",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 519,
-   "id": "14e72bdc",
+   "id": "d5dfc27d",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 520,
-   "id": "baf73513",
+   "id": "fd39fcb1",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 521,
-   "id": "be762726",
+   "id": "fb11da59",
    "metadata": {},
    "outputs": [
     {
@@ -1081,23 +1083,25 @@
     }
    ],
    "source": [
+    "# Data Cleaning - Null check or missing Values\n",
     "bikeData.isnull()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 522,
-   "id": "eef55c4f",
+   "id": "b2e6862a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data Cleaning - Null check or missing Values\n",
     "bikeNullValues = bikeData.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 523,
-   "id": "1333afde",
+   "id": "245fb8ed",
    "metadata": {},
    "outputs": [
     {
@@ -1128,13 +1132,14 @@
     }
    ],
    "source": [
+    "# Data Cleaning - Null check or missing Values\n",
     "(bikeNullValues/len(bikeData))*100"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 524,
-   "id": "dc69d2a7",
+   "id": "2e2fe1d4",
    "metadata": {},
    "outputs": [
     {
@@ -1149,13 +1154,14 @@
     }
    ],
    "source": [
+    "# Data Cleaning - Finding Duplicate Values\n",
     "bikeData.duplicated().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 525,
-   "id": "51036cfd",
+   "id": "53c8e4d1",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2062,7 @@
   {
    "cell_type": "code",
    "execution_count": 526,
-   "id": "482e6e1d",
+   "id": "668b9667",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 527,
-   "id": "a53ee522",
+   "id": "8e83e32d",
    "metadata": {},
    "outputs": [
     {
@@ -2368,7 +2374,7 @@
   {
    "cell_type": "code",
    "execution_count": 528,
-   "id": "fc7dd712",
+   "id": "8bc958e1",
    "metadata": {},
    "outputs": [
     {
@@ -2408,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 529,
-   "id": "11d04180",
+   "id": "56c3b8b2",
    "metadata": {},
    "outputs": [
     {
@@ -2443,6 +2449,7 @@
     }
    ],
    "source": [
+    "# Plotting charts\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -2464,7 +2471,7 @@
   {
    "cell_type": "code",
    "execution_count": 530,
-   "id": "e7869332",
+   "id": "f0f2afc9",
    "metadata": {},
    "outputs": [
     {
@@ -2488,6 +2495,8 @@
     }
    ],
    "source": [
+    "# Data standardization using StandardScaler\n",
+    "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Select numerical columns for scaling\n",
@@ -2506,7 +2515,7 @@
   {
    "cell_type": "code",
    "execution_count": 531,
-   "id": "38a791ed",
+   "id": "c1b01b4c",
    "metadata": {
     "scrolled": true
    },
@@ -2548,7 +2557,7 @@
   {
    "cell_type": "code",
    "execution_count": 532,
-   "id": "e366e3fe",
+   "id": "8dc8ccb9",
    "metadata": {},
    "outputs": [
     {
@@ -2718,10 +2727,11 @@
   {
    "cell_type": "code",
    "execution_count": 533,
-   "id": "5deecd8e",
+   "id": "a61a2997",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating Derivative variables\n",
     "bikeData['year'] = bikeData['dteday'].dt.year\n",
     "bikeData['month'] = bikeData['dteday'].dt.month\n",
     "bikeData['day'] = bikeData['dteday'].dt.day"
@@ -2730,7 +2740,7 @@
   {
    "cell_type": "code",
    "execution_count": 534,
-   "id": "6021a436",
+   "id": "4fee8893",
    "metadata": {},
    "outputs": [
     {
@@ -3078,10 +3088,12 @@
   {
    "cell_type": "code",
    "execution_count": 535,
-   "id": "b5bf16a5",
+   "id": "c06c0314",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data mapping\n",
+    "\n",
     "bikeData['season'] = bikeData['season'].map({\n",
     "    1: \"spring\",\n",
     "    2: \"summer\",\n",
@@ -3100,7 +3112,7 @@
   {
    "cell_type": "code",
    "execution_count": 536,
-   "id": "c46bb90e",
+   "id": "4186bc3d",
    "metadata": {},
    "outputs": [
     {
@@ -3448,17 +3460,18 @@
   {
    "cell_type": "code",
    "execution_count": 537,
-   "id": "89099be2",
+   "id": "21522f3e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#converted to dummy variables using one-hot encoding.\n",
     "df = pd.get_dummies(bikeData, columns=['season', 'weathersit', 'mnth', 'weekday'], drop_first=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 538,
-   "id": "08c071b6",
+   "id": "74ad7b16",
    "metadata": {},
    "outputs": [
     {
@@ -3519,7 +3532,7 @@
   {
    "cell_type": "code",
    "execution_count": 539,
-   "id": "ed59e3b8",
+   "id": "0290694e",
    "metadata": {},
    "outputs": [
     {
@@ -3572,7 +3585,7 @@
   {
    "cell_type": "code",
    "execution_count": 540,
-   "id": "dd68e543",
+   "id": "396b078e",
    "metadata": {},
    "outputs": [
     {
@@ -4609,7 +4622,7 @@
   {
    "cell_type": "code",
    "execution_count": 541,
-   "id": "aa7e6969",
+   "id": "48d2feaf",
    "metadata": {},
    "outputs": [
     {
@@ -4624,6 +4637,7 @@
     }
    ],
    "source": [
+    "# Correleation Heat Map\n",
     "plt.figure(figsize=(50, 50))\n",
     "sns.heatmap(df.corr(), annot=True, cmap='coolwarm', center=0)\n",
     "plt.show()"
@@ -4632,7 +4646,7 @@
   {
    "cell_type": "code",
    "execution_count": 542,
-   "id": "ca60ec26",
+   "id": "43fd21ad",
    "metadata": {},
    "outputs": [
     {
@@ -4693,17 +4707,18 @@
   {
    "cell_type": "code",
    "execution_count": 543,
-   "id": "470f0023",
+   "id": "57c5c121",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dropping the variables which are categorical not required to find VIF\n",
     "features = df.drop(['cnt', 'dteday', 'instant', 'casual', 'registered'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 544,
-   "id": "0ab23483",
+   "id": "48f0f438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4714,7 +4729,7 @@
   {
    "cell_type": "code",
    "execution_count": 545,
-   "id": "a7d516ec",
+   "id": "5d8470f6",
    "metadata": {},
    "outputs": [
     {
@@ -4729,6 +4744,7 @@
     }
    ],
    "source": [
+    "# Finding VIF \n",
     "X = add_constant(features)\n",
     "vif = pd.DataFrame()\n",
     "vif['variable'] = X.columns\n",
@@ -4738,7 +4754,7 @@
   {
    "cell_type": "code",
    "execution_count": 546,
-   "id": "9710edb3",
+   "id": "8cf6c0ad",
    "metadata": {},
    "outputs": [
     {
@@ -4985,7 +5001,7 @@
   {
    "cell_type": "code",
    "execution_count": 547,
-   "id": "ca7895e2",
+   "id": "015907b2",
    "metadata": {},
    "outputs": [
     {
@@ -5044,7 +5060,7 @@
   {
    "cell_type": "code",
    "execution_count": 548,
-   "id": "64d25948",
+   "id": "736e25e2",
    "metadata": {},
    "outputs": [
     {
@@ -5099,6 +5115,7 @@
     }
    ],
    "source": [
+    "# Finding duplicates to remove VIF\n",
     "duplicates = df.columns[df.T.duplicated()]\n",
     "duplicates\n",
     "df.info()"
@@ -5107,7 +5124,7 @@
   {
    "cell_type": "code",
    "execution_count": 549,
-   "id": "9efe2bb2",
+   "id": "48f79920",
    "metadata": {},
    "outputs": [
     {
@@ -5318,7 +5335,7 @@
   {
    "cell_type": "code",
    "execution_count": 550,
-   "id": "394b9474",
+   "id": "b077d6e9",
    "metadata": {},
    "outputs": [
     {
@@ -5333,6 +5350,7 @@
     }
    ],
    "source": [
+    "# VIF calculation to avoid multi collinearity\n",
     "df_backup = df\n",
     "variables_to_remove = ['cnt', 'dteday', 'instant', 'casual', 'registered', 'atemp', 'temp']\n",
     "for variable in variables_to_remove:\n",
@@ -5351,7 +5369,7 @@
   {
    "cell_type": "code",
    "execution_count": 551,
-   "id": "3ea02075",
+   "id": "619fdbc3",
    "metadata": {},
    "outputs": [
     {
@@ -5592,7 +5610,7 @@
   {
    "cell_type": "code",
    "execution_count": 552,
-   "id": "99cfbb98",
+   "id": "d90fd3a0",
    "metadata": {},
    "outputs": [
     {
@@ -5964,7 +5982,7 @@
   {
    "cell_type": "code",
    "execution_count": 557,
-   "id": "5881856a",
+   "id": "dcbe4ec3",
    "metadata": {},
    "outputs": [
     {
@@ -6019,6 +6037,7 @@
     }
    ],
    "source": [
+    "# Creating model and training data using sklearn - lineargression\n",
     "df = df_backup\n",
     "df.info()\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -6035,7 +6054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bda98f6",
+   "id": "8bc426ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6045,7 +6064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab383864",
+   "id": "3f62fd0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6055,7 +6074,7 @@
   {
    "cell_type": "code",
    "execution_count": 558,
-   "id": "48f23379",
+   "id": "e7c2a543",
    "metadata": {},
    "outputs": [
     {
@@ -6130,7 +6149,7 @@
   {
    "cell_type": "code",
    "execution_count": 559,
-   "id": "9037487a",
+   "id": "2a99d180",
    "metadata": {},
    "outputs": [
     {
@@ -6172,6 +6191,7 @@
     }
    ],
    "source": [
+    "# Finding coefficients\n",
     "coefficients = pd.DataFrame(model.coef_, X.columns, columns=['Coefficient'])\n",
     "print(coefficients)\n"
    ]
@@ -6179,7 +6199,7 @@
   {
    "cell_type": "code",
    "execution_count": 561,
-   "id": "4a6ca90a",
+   "id": "12b6e7fa",
    "metadata": {},
    "outputs": [
     {
@@ -6204,13 +6224,14 @@
     }
    ],
    "source": [
+    "# Plotter for the test data and predicted data\n",
     "plt.scatter(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 562,
-   "id": "2f089779",
+   "id": "72d18d17",
    "metadata": {},
    "outputs": [
     {
@@ -6225,6 +6246,7 @@
     }
    ],
    "source": [
+    "# Residual charts\n",
     "residuals = y_test - y_pred\n",
     "# Visualize residuals\n",
     "plt.figure(figsize=(10, 5))\n",
@@ -6238,10 +6260,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eea54514",
+   "id": "f067133b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Using RFE to select the features and build the model\n",
     "from sklearn.feature_selection import RFE\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
@@ -6284,10 +6307,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "838674c6",
+   "id": "272e7f9a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Building model using statsmodel api\n",
     "import statsmodels.api as sm\n",
     "\n",
     "# Add a constant to the model (intercept)\n",
@@ -6303,10 +6327,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acd079b2",
+   "id": "4c0e2ae6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Using RFE in statsmodel api\n",
+    "\n",
     "import statsmodels.api as sm\n",
     "from sklearn.feature_selection import RFE\n",
     "from sklearn.linear_model import LinearRegression\n",
